# alekbuza.bluebook

./: LICENSE  README.md  galaxy.yml  pyproject.toml
roles/bluebook.hosts/defaults/: main.yml
roles/bluebook.hosts/handlers/: main.yml
roles/bluebook.hosts/molecule/default/: converge.yml
roles/bluebook.hosts/tasks/: main.yml
roles/bluebook.hosts/tests/: test.yml
roles/bluebook.hosts/vars/: main.yml
roles/bluebook.sysctl/: CHANGELOG.md  README.md
roles/bluebook.sysctl/defaults/: main.yml
roles/bluebook.sysctl/handlers/: main.yml
roles/bluebook.sysctl/meta/: main.yml
roles/bluebook.sysctl/molecule/default/: converge.yml
roles/bluebook.sysctl/tasks/: main.yml  sysctl.yml
roles/bluebook.sysctl/tasks/sysctl.d/: delete-unmanaged.yml  main.yml
roles/bluebook.sysctl/templates/: sysctl_config.j2  sysctld_config.j2
roles/bluebook.sysctl/tests/: test.yml
roles/bluebook.sysctl/vars/: main.yml
