[tool.poetry]
name = "alekbuza.bluebook"
version = "0.0.1"
description = ""
authors = ["Aleksandar Buza <git@aleksandarbuza.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.9.0"
molecule = {extras = ["lint"], version = "^3.5.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
