[tool.poetry]
name = "alekbuza.bluebook"
version = "0.0.1"
description = ""
authors = ["Aleksandar Buza <git@aleksandarbuza.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.9.0"
molecule = {extras = ["lint"], version = "^3.5.2"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
